--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f084b1c1850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e29790490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f084ae9ce50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f084aeaf050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e290fff10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6e2911b150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f084b45e810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f084b45ea10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e296c98d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6e296c9ad0&gt;]</pre>
 </div>
 
 </div>
