--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ca74fce90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2520406f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ca71f2610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ca71eb150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f252010b550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f252010b1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ca7802450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ca779aa10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25206b5750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25206b5950&gt;]</pre>
 </div>
 
 </div>
