--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21ed2d6b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7bec4e6910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21ed2e8b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21ed30f2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bec1badd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7bec1bafd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21ed8ad790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21ed8b78d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bec785710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7bec785910&gt;]</pre>
 </div>
 
 </div>
