--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7929c34590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9aad124210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f792a033c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f792a033e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9aacdf7e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9aacdf7fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f792a601690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f792a601890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9aad3c3790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9aad3c3990&gt;]</pre>
 </div>
 
 </div>
