--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9aad124210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa8897d41d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9aacdf7e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9aacdf7fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa889d73e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa889d92110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9aad3c3790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9aad3c3990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa88a341810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa88a341a50&gt;]</pre>
 </div>
 
 </div>
