--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9cb64e61d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f709a9538d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cb6175210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9cb6175490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f709a619d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f709a619f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cb671c6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9cb671c890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f709abdc6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f709abdc8d0&gt;]</pre>
 </div>
 
 </div>
