--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe9ad67b050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7effd733a3d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9ad340c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe9ad340e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effd70270d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effd70272d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9ad90f590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe9ad90f790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effd75d7990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effd75d7b90&gt;]</pre>
 </div>
 
 </div>
