--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d80487d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2ff33c1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d8017f450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d80174150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2ff00ddd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2ff00dfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d807267d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d807269d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2ff5d9710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2ff5d9910&gt;]</pre>
 </div>
 
 </div>
