--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa79b9a4250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d2ed2e5d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa79b69b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa79b693150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d2f2b9f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d2f2d71d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa79bc418d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa79bc41ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d2f885890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d2f885ad0&gt;]</pre>
 </div>
 
 </div>
