--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f35f3173ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb79f65c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35f2e45f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35f2e631d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb79970a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb79c52150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35f3411910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35f3411b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb7a23bbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb7a203a90&gt;]</pre>
 </div>
 
 </div>
