--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb79f65c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f02e432d390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb79970a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb79c52150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02e42d9e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02e42f8090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb7a23bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb7a203a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f02e48a6810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f02e48a6a10&gt;]</pre>
 </div>
 
 </div>
