--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a85885d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3de6ab1c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a85532f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a8554e150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3de6795910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3de6792150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a85afc8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7a85afcad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3de6d8fb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3de6d2ba10&gt;]</pre>
 </div>
 
 </div>
