--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3de6ab1c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7cc9e5610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3de6795910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3de6792150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7cc64af10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7cc66a150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3de6d8fb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3de6d2ba10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7ccc158d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7ccc15ad0&gt;]</pre>
 </div>
 
 </div>
