--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f887e563e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d32e61a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f887e259090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f887e24e150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d32b1afd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d32b37210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f887e800810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f887e800a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d330e5910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d330e5b10&gt;]</pre>
 </div>
 
 </div>
