--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e7eba6950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0df9f59990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e7eb7f1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e7eb64050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0df9c42e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0df9c42fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e7f16aa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e7f1149d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfa1f9750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0dfa1f9950&gt;]</pre>
 </div>
 
 </div>
