--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5444b2f410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8644e640d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f544480af90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f544480d1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8644b6df90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8644b4c1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5444dbe8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5444dbead0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f86450fd890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f86450fda90&gt;]</pre>
 </div>
 
 </div>
