--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b343b3090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb932c98c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b34077f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b340931d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb93295bf50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb932979190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b34641890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b34641a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb932f27890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb932f27a90&gt;]</pre>
 </div>
 
 </div>
