--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f226beaf3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29c7b20ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f226bb35ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f226bb52110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29c77dbed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29c7802110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f226c101810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f226c101a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29c7da7810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29c7da7a10&gt;]</pre>
 </div>
 
 </div>
