--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cf0ef6890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6c63d2dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cf0bcc750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cf0bd30d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6c608af50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6c60a9190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cf117c550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cf1184a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6c6658850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6c6658a50&gt;]</pre>
 </div>
 
 </div>
