--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca3fd74810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f954f165ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca3fa3bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca3fa3be10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f954ee16f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f954ee26150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca40005590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca400057d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f954f3d8810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f954f3d8a10&gt;]</pre>
 </div>
 
 </div>
