--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04b1e35ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d71058f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04b1b20090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04b1b20290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d70d8ced0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d70d85110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f04b20cd950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f04b20cdb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d71334910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1d71334b10&gt;]</pre>
 </div>
 
 </div>
